使用 Colaboratory 创建

--- a/BP.ipynb
+++ b/BP.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "dEq86Yg0_OU7"
       ],
-      "authorship_tag": "ABX9TyMZx2Xs9/7MPuyiGhuWILkn",
+      "authorship_tag": "ABX9TyMj468Z8wIsD1RX7Ea0yRzn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1027,18 +1027,14 @@
       "metadata": {
         "id": "JfCDjRpgUqUe",
         "colab_type": "code",
-        "outputId": "373daf2f-9b60-4e02-9f93-e0fe6e7f7dfb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "colab": {}
       },
       "source": [
         "# 无框架\n",
         "# https://blog.csdn.net/weixin_41722370/article/details/83590276\n",
         "# 反向传播b的梯度计算用\n",
         "\n",
-        "\n",
+        "import numpy as np\n",
         "from sklearn import datasets\n",
         "from sklearn.model_selection import train_test_split\n",
         "# 加载sklearn自带的mnist数据\n",
@@ -1091,6 +1087,12 @@
         "        self.params['b1'] = np.zeros(hidden_size)\n",
         "        self.params['W2'] = std * np.random.randn(hidden_size, output_size)\n",
         "        self.params['b2'] = np.zeros(output_size)\n",
+        "        self.params['W1_sum_grad'] = np.zeros(shape=(input_size, hidden_size), dtype=float)\n",
+        "        self.params['W2_sum_grad'] = np.zeros(shape=(hidden_size, output_size),dtype=float)\n",
+        "        self.params['b1_sum_grad'] = np.zeros(shape=(hidden_size,),dtype=float)\n",
+        "        self.params['b2_sum_grad'] = np.zeros(shape=(output_size,),dtype=float)\n",
+        "        # print(self.params['W1_sum_grad'])\n",
+        "\n",
         "    # 定义损失函数，里面包含了前向传播的实现过程\n",
         "    def loss(self, X, y=None, reg=0.0):\n",
         "        # 先讲各个参数都提取出来\n",
@@ -1142,7 +1144,7 @@
         "\n",
         "    # 训练神经网络，使用了随机梯度下降，和学习率衰减的技巧\n",
         "    def train(self, X, y, X_val, y_val,\n",
-        "            learning_rate=1e-3, learning_rate_decay=0.95,\n",
+        "            learning_rate=1e-2, learning_rate_decay=0.95,\n",
         "            reg=5e-6, num_iters=100,\n",
         "            batch_size=200, verbose=False):\n",
         "        # 查看有有多少个训练样本，并检查按照设定的batch大小每个epoch需要迭代多少次\n",
@@ -1165,6 +1167,20 @@
         "            loss, grads = self.loss(X_batch, y=y_batch, reg=reg)\n",
         "            # 记录这次迭代的损失大小\n",
         "            loss_history.append(loss)\n",
+        "            self.params['W1_sum_grad'] += grads['W1']\n",
+        "            self.params['W2_sum_grad'] += grads['W2']\n",
+        "            self.params['b1_sum_grad'] += grads['b1']\n",
+        "            self.params['b2_sum_grad'] += grads['b2']\n",
+        "            \n",
+        "            # print(self.params['b2_sum_grad'])\n",
+        "\n",
+        "            grads['W1']=grads['W1']/np.sqrt(self.params['W1_sum_grad'] + 1e-3)\n",
+        "            grads['W2']=grads['W2']/np.sqrt(self.params['W2_sum_grad'] + 1e-3)\n",
+        "            grads['b1']=grads['b1']/np.sqrt(self.params['b1_sum_grad'] + 1e-3)\n",
+        "            grads['b2']=grads['b2']/np.sqrt(self.params['b2_sum_grad'] + 1e-3)\n",
+        "\n",
+        "            # print(grads['W1'])\n",
+        "\n",
         "            self.params['W1'] -=  learning_rate * grads['W1']\n",
         "            self.params['b1'] -=  learning_rate * grads['b1']\n",
         "            self.params['W2'] -=  learning_rate * grads['W2']\n",
@@ -1214,71 +1230,47 @@
         "print('test accuracy: ', test_acc)"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0uiZLn3fDDmj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "466f563d-2485-407b-d24e-631d1c0a0373"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "a = np.array([[1.2,2,3],[4,5,6]])\n",
+        "b = np.array([[1.2,2,3],[4,5,6]])\n",
+        "a+=1.2\n",
+        "b /= np.sqrt(a)\n",
+        "a = np.ones(shape=(1, 2), dtype=float)\n",
+        "b = np.zeros(shape=(1, 2), dtype=float)\n",
+        "# b.shape\n",
+        "\n",
+        "a = a/np.sqrt(b + 1e-3)\n",
+        "\n",
+        "a"
+      ],
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "dataset shape is:  (1797, 8, 8)\n",
-            "the number of train:  1137\n",
-            "the number of test:  360\n",
-            "the number of validation:  300\n",
-            "training data shape:  (1137, 64)\n",
-            "validation data shape:  (300, 64)\n",
-            "test data shape:  (360, 64)\n",
-            "iteration 0 / 5000: loss 2.302588\n",
-            "iteration 100 / 5000: loss 2.301870\n",
-            "iteration 200 / 5000: loss 2.214278\n",
-            "iteration 300 / 5000: loss 1.272267\n",
-            "iteration 400 / 5000: loss 0.975817\n",
-            "iteration 500 / 5000: loss 0.862598\n",
-            "iteration 600 / 5000: loss 0.816536\n",
-            "iteration 700 / 5000: loss 0.819364\n",
-            "iteration 800 / 5000: loss 0.817833\n",
-            "iteration 900 / 5000: loss 0.806645\n",
-            "iteration 1000 / 5000: loss 0.770617\n",
-            "iteration 1100 / 5000: loss 0.788922\n",
-            "iteration 1200 / 5000: loss 0.704431\n",
-            "iteration 1300 / 5000: loss 0.755838\n",
-            "iteration 1400 / 5000: loss 0.781189\n",
-            "iteration 1500 / 5000: loss 0.766308\n",
-            "iteration 1600 / 5000: loss 0.776953\n",
-            "iteration 1700 / 5000: loss 0.749965\n",
-            "iteration 1800 / 5000: loss 0.756050\n",
-            "iteration 1900 / 5000: loss 0.812253\n",
-            "iteration 2000 / 5000: loss 0.720129\n",
-            "iteration 2100 / 5000: loss 0.687662\n",
-            "iteration 2200 / 5000: loss 0.751599\n",
-            "iteration 2300 / 5000: loss 0.800976\n",
-            "iteration 2400 / 5000: loss 0.716388\n",
-            "iteration 2500 / 5000: loss 0.727636\n",
-            "iteration 2600 / 5000: loss 0.764305\n",
-            "iteration 2700 / 5000: loss 0.706406\n",
-            "iteration 2800 / 5000: loss 0.798527\n",
-            "iteration 2900 / 5000: loss 0.822899\n",
-            "iteration 3000 / 5000: loss 0.776703\n",
-            "iteration 3100 / 5000: loss 0.739423\n",
-            "iteration 3200 / 5000: loss 0.728834\n",
-            "iteration 3300 / 5000: loss 0.762866\n",
-            "iteration 3400 / 5000: loss 0.725684\n",
-            "iteration 3500 / 5000: loss 0.718199\n",
-            "iteration 3600 / 5000: loss 0.751164\n",
-            "iteration 3700 / 5000: loss 0.746851\n",
-            "iteration 3800 / 5000: loss 0.749810\n",
-            "iteration 3900 / 5000: loss 0.767951\n",
-            "iteration 4000 / 5000: loss 0.740973\n",
-            "iteration 4100 / 5000: loss 0.767854\n",
-            "iteration 4200 / 5000: loss 0.778481\n",
-            "iteration 4300 / 5000: loss 0.756102\n",
-            "iteration 4400 / 5000: loss 0.709242\n",
-            "iteration 4500 / 5000: loss 0.737817\n",
-            "iteration 4600 / 5000: loss 0.761704\n",
-            "iteration 4700 / 5000: loss 0.740626\n",
-            "iteration 4800 / 5000: loss 0.785851\n",
-            "iteration 4900 / 5000: loss 0.761271\n",
-            "Validation accuracy:  0.9633333333333334\n",
-            "test accuracy:  0.9583333333333334\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[31.6227766, 31.6227766]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
         }
       ]
     },
@@ -1805,11 +1797,11 @@
       "metadata": {
         "id": "K6wrxmLmCUf8",
         "colab_type": "code",
+        "outputId": "d1681f2b-9dff-465b-ced4-bea072a8513e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "d1681f2b-9dff-465b-ced4-bea072a8513e"
+        }
       },
       "source": [
         "import os\n",
@@ -1858,7 +1850,7 @@
         "\"\"\"----------模型存储--------------------\"\"\"\n",
         "save_model(model,'my_model')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2009,11 +2001,11 @@
       "metadata": {
         "id": "pFuAtqRhtnaY",
         "colab_type": "code",
+        "outputId": "7282d6e1-4839-412e-c7ba-8d9cadfe15a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "7282d6e1-4839-412e-c7ba-8d9cadfe15a7"
+        }
       },
       "source": [
         "# https://blog.csdn.net/definedone/article/details/79140709\n",
@@ -2062,7 +2054,7 @@
         "p = data[['y','yp']].plot(subplots = True, style=['b-o','r-*'])\n",
         "plt.show()\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
