使用 Colaboratory 创建

--- a/BP.ipynb
+++ b/BP.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "dEq86Yg0_OU7"
       ],
-      "authorship_tag": "ABX9TyMj468Z8wIsD1RX7Ea0yRzn",
+      "authorship_tag": "ABX9TyOVgUYSCjDWlmqkmte00gU5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1015,11 +1015,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8uD3ttldAIHg",
+        "id": "OVxt4yJWky9N",
         "colab_type": "text"
       },
       "source": [
-        "# 无框架"
+        "# 编码测试"
       ]
     },
     {
@@ -1027,7 +1027,11 @@
       "metadata": {
         "id": "JfCDjRpgUqUe",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "9c1669d9-9724-4ceb-b3ca-bd5d86ce2a89",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        }
       },
       "source": [
         "# 无框架\n",
@@ -1077,7 +1081,7 @@
         "num_classes = 10\n",
         "# 为了之后使用的方便，我将参数初始化，计算loss，训练，预测的过程都定义在一个名为network的类中\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
+        "# import matplotlib.pyplot as plt\n",
         "class network(object):\n",
         "    # 初始化参数,将W,b保存在名为params的字典中\n",
         "    # W随机初始化，b初始化为零\n",
@@ -1167,10 +1171,13 @@
         "            loss, grads = self.loss(X_batch, y=y_batch, reg=reg)\n",
         "            # 记录这次迭代的损失大小\n",
         "            loss_history.append(loss)\n",
-        "            self.params['W1_sum_grad'] += grads['W1']\n",
-        "            self.params['W2_sum_grad'] += grads['W2']\n",
-        "            self.params['b1_sum_grad'] += grads['b1']\n",
-        "            self.params['b2_sum_grad'] += grads['b2']\n",
+        "\n",
+        "            # adagrads:\n",
+        "\n",
+        "            self.params['W1_sum_grad'] += grads['W1']**2\n",
+        "            self.params['W2_sum_grad'] += grads['W2']**2\n",
+        "            self.params['b1_sum_grad'] += grads['b1']**2\n",
+        "            self.params['b2_sum_grad'] += grads['b2']**2\n",
         "            \n",
         "            # print(self.params['b2_sum_grad'])\n",
         "\n",
@@ -1219,7 +1226,7 @@
         "\n",
         "net = network(input_size, hidden_size, num_classes)\n",
         "stats = net.train(X_train, y_train, X_val, y_val,\n",
-        "            num_iters=5000, batch_size=200,\n",
+        "            num_iters=500, batch_size=200,\n",
         "            learning_rate=0.01, learning_rate_decay=0.95,\n",
         "            reg=0.25, verbose=True)\n",
         "\n",
@@ -1229,49 +1236,38 @@
         "test_acc = (net.predict(X_test) == y_test).mean()\n",
         "print('test accuracy: ', test_acc)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0uiZLn3fDDmj",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "466f563d-2485-407b-d24e-631d1c0a0373"
-      },
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "a = np.array([[1.2,2,3],[4,5,6]])\n",
-        "b = np.array([[1.2,2,3],[4,5,6]])\n",
-        "a+=1.2\n",
-        "b /= np.sqrt(a)\n",
-        "a = np.ones(shape=(1, 2), dtype=float)\n",
-        "b = np.zeros(shape=(1, 2), dtype=float)\n",
-        "# b.shape\n",
-        "\n",
-        "a = a/np.sqrt(b + 1e-3)\n",
-        "\n",
-        "a"
-      ],
-      "execution_count": 25,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[31.6227766, 31.6227766]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 25
+          "output_type": "stream",
+          "text": [
+            "dataset shape is:  (1797, 8, 8)\n",
+            "the number of train:  1137\n",
+            "the number of test:  360\n",
+            "the number of validation:  300\n",
+            "training data shape:  (1137, 64)\n",
+            "validation data shape:  (300, 64)\n",
+            "test data shape:  (360, 64)\n",
+            "iteration 0 / 500: loss 2.302588\n",
+            "iteration 100 / 500: loss 0.823211\n",
+            "iteration 200 / 500: loss 0.831976\n",
+            "iteration 300 / 500: loss 0.771279\n",
+            "iteration 400 / 500: loss 0.792461\n",
+            "Validation accuracy:  0.95\n",
+            "test accuracy:  0.9444444444444444\n"
+          ],
+          "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "00WPGgFzk8Im",
+        "colab_type": "text"
+      },
+      "source": [
+        "# bp in tf,pytorch,keras..."
       ]
     },
     {
@@ -1281,7 +1277,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# tf"
+        "## tf"
       ]
     },
     {
@@ -1425,7 +1421,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# pytorch\n"
+        "## pytorch\n"
       ]
     },
     {
@@ -1747,7 +1743,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# keras"
+        "## keras"
       ]
     },
     {
